--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -1,6 +1,30 @@
 ## Base Model Results
 
-Evidence of search for balance between realism/parsimony - not needed for update, refer to previous assessment.
+### Parameter Estimates
+
+The list of the all the parameters used in the assessment model and their values (either fixed or estimated) is provided in **Table X**. The growth parameters estimated within the model are reasonable, commensurate with inspection of the raw data and consistent with what we know about the species. These parameters are relatively precisely estimated, in terms of the asymptotic standard error estimates. **Figure X** shows the estimated growth curve. Spawning output-at-length is shown in **Figure X**. Spawning output in the assessment is expressed in millions of eggs.
+
+Estimated stock-recruit function for the assessment model is shown in **Figure X**. Estimated recruitment deviations are shown **Figure X**. Recruitment of yelloweye rockfish was estimated to be quite variable over time, and the estimated stock-recruit function predicts a relatively wide range of cohort sizes over the observed range of spawning biomass. The model output recruitment variance (RMSE = 0.48) is consistent with the fixed input recruitment variance (R = 0.5).
+
+Length-based selectivity curves estimated in the assessment are shown for all fleets together in **Figure X** and for each fleet and survey separately from **Figure X** through **Figure X**. Estimated selectivity curves for the fishing fleets indicate that the recreational fleets access somewhat smaller fish than the commercial fisheries. This pattern is most pronounced in Oregon, and also as expected, since recent charter fishing selectivity has shifted shoreward where there is a higher density of smaller fish. Addition of the charter vessel length data did not appreciably change the estimate for the California recreational selectivity pattern and so the selectivity for the two series was not separated. All fleets for which curves were allowed to be dome-shaped (commercial trawl and non-trawl fleets) were estimated to be asymptotic. Estimated selectivity curves for the IPHC survey indicate a selection of the largest yelloweye available, and select the least amount of smaller yelloweye rockfish. The NWFSC trawl survey selected far more smaller yelloweye among all surveys. That the triennial survey selectivity was shifted to the largest fish but also selected some very small fish is likely an artifact of the very noisy composition data from that survey (**Figure X**). 
+
+### Fits to the Data
+
+Model fits to the fishery CPUE and survey indices are presented in **Figure X** through **Figure X**. The base model predicted a decreasing trend in the triennial survey between 1980 and 2004 (**Figure X**) and a slightly increasing trend for the NWFSC trawl survey between 2003 and 2024 (**Figure X**). The model predicted a relatively flat trend through the IPHC survey index despite the upward trend seen in the last three years as of this update (**Figure X**). The triennial survey index indicated a population decrease in 1992 and lower estimates (compared with pre-1992) persisted through the end of the index time series. This decrease in the abundance index coincided with decrease in number of biological samples collected from this survey. No changes have been implemented to the triennial survey between 1989 and 1992. In 1995, the survey timing slightly shifted from early fall to mid-summer, approximately a month earlier that previous surveys. This shift in timing, however, seems unlikely to impact our understanding of yelloweye rockfish abundance trends during that period, given the sedentary life history of the species. Additionally, the change in the index trend was observed before the slight shift in survey timing. The California MRFSS recreational CPUE index tracked the decline in observations through the 1990s (**Figure X**), and a slight increase in abundance was predicted in the Oregon MRFSS/ORBS recreational index during the 2000s (**Figure X**). The Oregon recreational observer index showed a small and very uncertain increasing trend in the 2000s (**Figure X**). The California CPFV charter series index indicated a relatively flat trajectory prior to 1992 with a drop in stock abundance from 1992 on (**Figure X**). The model predicted a decreasing trend for the Washington Recreational index despite the relatively large variances on many of the observations, which does not match the relative stability of the index from 1982 to the early 2000s (**Figure X**).
+
+The model fits to length frequency distributions by year are shown in **Figure X** through **Figure X**. Pearson residuals for the fits by fleet and year are shown in **Figure X** through **Figure X**. The length data are very sparse in many years and the quality of fit varies among years and fleets, reflecting the differences in the quantity and quality of the data. However, neither length composition data nor the Pearson residuals, which reflect the noise in the data both within and among years, exhibit obvious patterns for any fleet. The data for fishing fleets are particularly poor after 2002 after retention of yelloweye rockfish was prohibited in most fleets and limited in trawl fleets. The model fitted length data aggregated across years reasonably well for all fleets. Input sample sizes for length composition data were tuned down using the Francis data weighting method. Francis weighting fits to the mean lengths for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X**.
+
+The fits to age data are shown in **Figure X** through **Figure X**, with the “ghost” marginal age compositions shown to aid in visual interpretation of these fits. These “ghost” age compositions do not contribute to the likelihood and do not affect model fit in any way. Input sample sizes for conditional age-at-length composition data were also tuned down using Francis data weighting method. The Francis weighting index fit of the conditional age-at-length data for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X**.
+
+### Population Trajectory
+
+The estimated time series of spawning output for the entire stock and by area are shown in **Figure X** and **Figure X**, respectively. Relative spawning output (relative to SB0) for the entire stock and by area are shown in **Figure X** and **Figure X**, respectively. Total biomass, summary biomass and recruitment are shown in **Figure X**, **Figure X** and **Figure X**, respectively. They are also presented in **Figure X**. Trends in total and summary biomass, absolute and relative spawning output track one another very closely. The spawning output of yelloweye rockfish started to decline in the 1940s during World War II, but are estimated to have been lightly exploited until the mid-1970s when catches increased and a rapid decline in biomass and spawning output began. The relative spawning output reached a minimum of 16% of unexploited levels in 2000 (**Figure X**). Yelloweye rockfish spawning output is estimated to have been gradually increasing since that time, in response to large reductions in harvest.
+
+The aggregate spawning output estimates do not convey the spatial heterogeneity included via the area-specific dynamics. Relative spawning output has differed between the two areas modelled in the assessment, with the California resource estimated to have a lower unfished
+equilibrium spawning output and estimated to be more depleted in 2025 than the Oregon and Washington resource (**Figure X**). As an exploratory exercise, we also generated an estimate of the time series of spawning output by area relative to the fixed ratio of recruitment distribution (**Figure X**). Unexpectedly, the simplifying assumption of a constant ratio of recruits is not reflected in the spawning biomass, showing source and sink dynamics of two areas linked by common recruitment. To ensure that recruit distribution parameter does not cause unreasonable output, when a portion of the stock in one area is heavily depleted but sustained by high recruitment in another (less exploited) area, we conducted sensitivity analysis and compared the two-area base model to a single area model, and a single area model yielded the similar results as a two-area base model (**Table X**).
+
+Yelloweye OFL, ABC and ACL for recent years are summarized in Table 1. Table 1 also includes landings and total dead catch for recent years. Since in the assessment discards were not modeled separately (but included in the catch time series), landings and total catch in Table 1 are
+the same values. This is the case for all other tables reporting landings and total catches separately. For more information on how we accounted for discard in different time periods see **Section X.X.X.X.** Population numbers at age by year are provided in supplementary Excel table.
 
 ### Parameter Estimates
 
